Fix alignment issue with figure label in princexml pdf output
Previously the label was being pushed down, overlapping the second line of the caption

--- a/content/_assets/styles/components/q-figure.scss
+++ b/content/_assets/styles/components/q-figure.scss
@@ -159,7 +159,7 @@
     }
     user-select: text;
     a {
-      line-height: 1.5;
+      line-height: 0;
     }
   }
 
@@ -172,6 +172,7 @@
     display: inline-block;
     height: 0;
     font-weight: 700;
+    line-height: 0;
     margin-right: .5rem;
     .q-figure__label-icon {
       display: inline-block;
